Tests: add tests.xml
Note that it only reffers the (stress-/unit-)test, not the benchmark.

--- a/rpm/mthemedaemon.yaml
+++ b/rpm/mthemedaemon.yaml
@@ -44,4 +44,5 @@ SubPackages:
           - "/opt/tests/mthemedaemon/mthemedaemontest"
           - "/opt/tests/mthemedaemon/mthemedaemontest.bin"
           - "/opt/tests/mthemedaemon/testdaemon/testdaemon"
+          - "/opt/tests/mthemedaemon/tests.xml"
           - "/opt/tests/mthemedaemon/themes"
