Extract testutils from application code
Certain classes, formely part of libmeegotouch/corelib/theme, are now
used by test code only - extracted into a library shipped with testutils
subpackage.

Note that INotify global instance is no more stored by value - this
fixes segfault on exit.

Related commits:

eac27fb Import M*ThemeDaemon classes from libmeegotouch
0fd7963 Use temporary static lib to share code with tests

--- a/rpm/mthemedaemon.yaml
+++ b/rpm/mthemedaemon.yaml
@@ -28,6 +28,13 @@ Files:
     - "%{_sysconfdir}/xdg/autostart/mthemedaemon.desktop"
     - "%{_sysconfdir}/meegotouch/themedaemonpriorities.conf"
 SubPackages:
+    - Name: testutils
+      Summary: Utils for mthemedaemon test packages
+      Group: Development/Libraries
+      Description: |
+          This package contains utils for mthemedaemon test packages
+      Files:
+          - "/opt/tests/mthemedaemon/libutils.so*"
     - Name: benchmark-tests
       Summary: Test suite for mthemedaemon - benchmarks
       Group: Development/Libraries
